--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   "author": "Chinonso Chukwuogor<nonsochukwuogor@gmail.com>",
   "license": "MIT",
   "private": false,
+  "typings": "src/types/index.d.ts",
+  "scripts": {
+    "build": "rollup -c"
+  },
   "peerDependencies": {
-    "vuex": ">=3.1.0",
-    "vue": ">=2.3.0"
+    "vue": ">=2.3.0",
+    "vuex": ">=3.1.0"
   },
   "devDependencies": {
-    "typescript": "^3.9.7",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-replace": "^2.3.1",
+    "@rollup/plugin-typescript": "^5.0.2",
     "@types/jest": "^25.1.4",
     "core-js": "^2.6.11",
     "jest": "^25.2.4",
@@ -24,7 +28,11 @@
     "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.27.0",
     "ts-jest": "^25.3.0",
+    "typescript": "^3.9.7",
     "vue": "^2.6.11",
     "vuex": "^3.1.3"
+  },
+  "dependencies": {
+    "normalizr": "^3.6.0"
   }
 }
