--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "vuex-rdb",
   "version": "0.0.5",
   "description": "An Active record database for vuex",
-  "main": "dist/vuex-db.js",
+  "main": "dist/vuex-db.cjs.js",
+  "module": "dist/vuex-db.es.js",
   "repository": "https://github.com/nonsocode/vuex-rdb.git",
   "author": "Chinonso Chukwuogor<nonsochukwuogor@gmail.com>",
   "license": "MIT",
   "private": false,
-  "typings": "src/external-types.d.ts",
+  "types": "src/external-types.d.ts",
   "files": [
     "dist"
   ],
@@ -15,12 +16,12 @@
     "build": "rollup -c"
   },
   "peerDependencies": {
-    "vue": ">=2.3.0",
+    "vue": ">=2.5.0",
     "vuex": ">=3.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-node-resolve": "^8.4.0",
     "@rollup/plugin-replace": "^2.3.1",
     "@rollup/plugin-typescript": "^5.0.2",
     "@types/jest": "^25.1.4",
@@ -31,11 +32,10 @@
     "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.27.0",
     "ts-jest": "^25.3.0",
-    "typescript": "^3.9.7",
-    "vue": "^2.6.11",
-    "vuex": "^3.1.3"
+    "typescript": "^3.9.7"
   },
   "dependencies": {
-    "normalizr": "^3.6.0"
+    "normalizr": "^3.6.0",
+    "vuex": "^3.5.1"
   }
 }
