--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "ES5",
     "module": "esnext",
+    "downlevelIteration": true,
     "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
@@ -13,11 +14,29 @@
     "strictNullChecks": false,
     "sourceMap": true,
     "baseUrl": ".",
-    "types": ["jest"],
+    "types": [
+      "jest"
+    ],
+    "plugins": [
+      {
+        "transform": "typescript-transform-paths"
+      },
+      {
+        "transform": "typescript-transform-paths",
+        "afterDeclarations": true
+      }
+    ],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     },
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost"
+    ]
   },
   "include": ["src/**/*.ts", "src/**/*.vue", "tests/**/*.tsx"],
   "exclude": ["node_modules"]
