Fix @models imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,11 +26,7 @@
         "afterDeclarations": true
       }
     ],
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    },
+    "paths": {},
     "lib": [
       "esnext",
       "dom",
