--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
   "scripts": {
     "build": "tsc --declaration --emitDeclarationOnly --declarationDir dist && rollup -c"
   },
-  "peerDependencies": {
-    "vue": ">=2.5.0",
-    "vuex": ">=3.1.0"
-  },
+  "peerDependencies": {},
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^8.4.0",
@@ -32,10 +29,11 @@
     "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.27.0",
     "ts-jest": "^25.3.0",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "vue": "^2.6.11",
+    "vuex": "^3.5.1"
   },
   "dependencies": {
-    "normalizr": "^3.6.0",
-    "vuex": "^3.5.1"
+    "normalizr": "^3.6.0"
   }
 }
