--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vuex-rdb",
-  "version": "0.3.0",
+  "version": "0.4.1",
   "description": "An Active record database for vuex",
-  "main": "dist/vuex-db.cjs.js",
-  "module": "dist/vuex-db.es.js",
-  "browser": "dist/vuex-db.min.js",
-  "unpkg": "dist/vuex-db.min.js",
+  "main": "dist/vuex-rdb.cjs.js",
+  "module": "dist/vuex-rdb.es.js",
+  "browser": "dist/vuex-rdb.min.js",
+  "unpkg": "dist/vuex-rdb.min.js",
   "repository": "https://github.com/nonsocode/vuex-rdb.git",
   "author": "Chinonso Chukwuogor<nonsochukwuogor@gmail.com>",
   "license": "MIT",
