--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuex-rdb",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "An Active record database for vuex",
   "main": "dist/vuex-rdb.cjs.js",
   "module": "dist/vuex-rdb.es.js",
@@ -15,7 +15,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc --declaration --emitDeclarationOnly --declarationDir dist && rollup -c"
+    "build": "tsc --declaration --emitDeclarationOnly --declarationDir types && rollup -c"
   },
   "peerDependencies": {
     "vuex": "^3.3.0"
