--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Chinonso Chukwuogor<nonsochukwuogor@gmail.com>",
   "license": "MIT",
   "private": false,
-  "types": "dist/index.d.ts",
+  "types": "types/index.d.ts",
   "files": [
     "dist"
   ],
