--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "vuex-rdb",
   "version": "0.4.10",
   "description": "An Active record database for vuex",
-  "main": "dist/vuex-rdb.cjs.js",
+  "main": "dist/vuex-rdb.js",
+  "typings": "types/index.d.ts",
+  "module": "dist/vuex-rdb.es.js",
   "browser": "dist/vuex-rdb.min.js",
   "unpkg": "dist/vuex-rdb.min.js",
   "repository": "https://github.com/nonsocode/vuex-rdb.git",
@@ -10,10 +12,11 @@
   "license": "MIT",
   "private": false,
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
   "scripts": {
-    "build": "tsc --declaration --emitDeclarationOnly --declarationDir types && rollup -c"
+    "build": "rm -Rf dist && tsc --declaration --emitDeclarationOnly --declarationDir types && rollup -c"
   },
   "peerDependencies": {
     "vuex": "^3.3.0"
@@ -29,7 +32,6 @@
     "prettier": "1.19.1",
     "rollup": "^2.3.2",
     "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-typescript2": "^0.27.0",
     "ts-jest": "^25.3.0",
     "typescript": "^3.9.7",
     "vue": "^2.6.11",
