--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rollup": "^2.3.2",
     "rollup-plugin-terser": "^5.3.0",
     "ts-jest": "^25.3.0",
+    "tslib": "^2.0.1",
     "typescript": "^3.9.7",
     "vue": "^2.6.11",
     "vuex": "^3.5.1"
