--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "build": "rm -Rf dist && tsc --declaration --emitDeclarationOnly --declarationDir types && rollup -c"
   },
   "peerDependencies": {
-    "vuex": "^3.3.0",
-    "vue": "^2.5.0"
+    "vue": "^2.5.0",
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
@@ -30,6 +30,7 @@
     "core-js": "^2.6.11",
     "jest": "^25.2.4",
     "prettier": "1.19.1",
+    "reflect-metadata": "^0.1.13",
     "rollup": "^2.3.2",
     "rollup-plugin-terser": "^5.3.0",
     "ts-jest": "^25.3.0",
