--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@rollup/plugin-replace": "^2.3.1",
     "@rollup/plugin-typescript": "^5.0.2",
     "@types/jest": "^25.1.4",
+    "@vue/component-compiler-utils": "^3.2.0",
     "core-js": "^2.6.11",
     "jest": "^25.2.4",
     "parcel": "^1.12.4",
@@ -39,6 +40,7 @@
     "tslib": "^2.0.1",
     "typescript": "^3.9.7",
     "vue": "^2.6.12",
+    "vue-template-compiler": "^2.6.12",
     "vuex": "^3.5.1"
   },
   "dependencies": {
