--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vuex": "^3.5.1"
   },
   "dependencies": {
+    "hash-sum": "^2.0.0",
     "normalizr": "^3.6.0",
     "vue-hot-reload-api": "^2.3.4"
   }
