--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "jest"
+      "jest", "node"
     ],
     "plugins": [
       {
