--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
         "afterDeclarations": true
       }
     ],
-    "paths": {},
+    "paths": {
+      "~/*":["src/*"]
+    },
     "lib": [
       "esnext",
       "dom",
