--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "types"
   ],
   "scripts": {
-    "build": "tsc --declaration --emitDeclarationOnly --declarationDir types && rollup -c build/package.js"
+    "build": "tsc --declaration --emitDeclarationOnly --declarationDir types && rollup -c build/package.js",
+    "serve": "parcel --out-dir serve dev/index.html"
   },
   "peerDependencies": {
     "vue": "^2.6.0",
