--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "tsc --declaration --emitDeclarationOnly --declarationDir types && rollup -c build/package.js",
-    "serve": "parcel --out-dir serve dev/index.html"
+    "pretify": "prettier -w src"
   },
   "peerDependencies": {
     "vue": "^2.6.0",
@@ -31,8 +31,7 @@
     "@vue/component-compiler-utils": "^3.2.0",
     "core-js": "^2.6.11",
     "jest": "^25.2.4",
-    "parcel": "^1.12.4",
-    "prettier": "1.19.1",
+    "prettier": "^2.1.2",
     "reflect-metadata": "^0.1.13",
     "rollup": "^2.3.2",
     "rollup-plugin-terser": "^5.3.0",
