--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuex-rdb",
-  "version": "0.18.0",
+  "version": "0.19.0",
   "description": "An Active record database for vuex",
   "main": "dist/vuex-rdb.js",
   "typings": "types/index.d.ts",
@@ -43,7 +43,5 @@
     "vue-template-compiler": "^2.6.12",
     "vuex": "^3.5.1"
   },
-  "dependencies": {
-    "hash-sum": "^2.0.0"
-  }
+  "dependencies": {}
 }
