--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "vuex-rdb",
   "version": "0.20.5",
   "description": "An Active record database for vuex",
-  "main": "dist/vuex-rdb.js",
+  "main": "dist/vuex-rdb.cjs.js",
   "typings": "types/index.d.ts",
-  "browser": "dist/vuex-rdb.es.js",
-  "module": "dist/vuex-rdb.es.js",
+  "browser": "dist/vuex-rdb.js",
+  "module": "dist/vuex-rdb.esm.js",
   "unpkg": "dist/vuex-rdb.min.js",
   "repository": "https://github.com/nonsocode/vuex-rdb.git",
   "author": "Chinonso Chukwuogor<nonsochukwuogor@gmail.com>",
