--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "author": "Chinonso Chukwuogor<nonsochukwuogor@gmail.com>",
   "license": "MIT",
   "private": false,
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "files": [
     "dist",
     "types"
@@ -30,8 +35,10 @@
     "@rollup/plugin-typescript": "^5.0.2",
     "@types/jest": "^25.1.4",
     "core-js": "^2.6.11",
+    "husky": "^4.3.0",
     "jest": "^25.2.4",
     "prettier": "^2.1.2",
+    "pretty-quick": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "rollup": "^2.3.2",
     "rollup-plugin-terser": "^5.3.0",
