--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "scripts": {
     "build": "tsc --declaration --emitDeclarationOnly --declarationDir types && rollup -c build/bundle.js",
-    "pretify": "prettier  --config ./.prettierrc --ignore-path ./dist/* -w src"
+    "pretify": "prettier  --config ./.prettierrc -w src"
   },
   "peerDependencies": {
     "vue": "^2.6.0",
