--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": false,
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged --ignore-path=./.prettierignore"
+      "pre-commit": "pretty-quick --staged --ignore-path=.prettierignore"
     }
   },
   "files": [
