--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "private": false,
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged --ignore-path=.prettierignore"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js,ts}": "prettier --write"
   },
   "files": [
     "dist",
@@ -37,6 +40,7 @@
     "core-js": "^2.6.11",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
     "reflect-metadata": "^0.1.13",
