--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts}": "prettier --write"
+    "*.{js,ts}": "prettier --config ./.prettierrc --ignore-path ./.prettierignore --write"
   },
   "files": [
     "dist",
