--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "private": false,
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "pretty-quick --staged"
     }
   },
   "lint-staged": {
-    "*.{js,ts}": "prettier --config ./.prettierrc --ignore-path ./.prettierignore --write"
+    "*.{js,ts}": "prettier --write"
   },
   "files": [
     "dist",
@@ -40,7 +40,6 @@
     "core-js": "^2.6.11",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.3",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
     "reflect-metadata": "^0.1.13",
